# server/api/api_notifications_api.go
@@ -1,13 +1,3 @@
-/*
- * Notifications API
- *
- * A notifications proof of concept API
- *
- * API version: 0.1.0
- * Contact: joe@bebo.dev
- * Generated by: OpenAPI Generator (https://openapi-generator.tech)
- */
-
 package api
 
 import (
@@ -30,6 +20,12 @@ func NewNotificationsApiController(s NotificationsApiServicer) Router {
 func (c *NotificationsApiController) Routes() Routes {
 	return Routes{
 		{
+			"Authenticate",
+			strings.ToUpper("Post"),
+			"/authenticate",
+			c.Authenticate,
+		},
+		{
 			"AddNotification",
 			strings.ToUpper("Put"),
 			"/addNotification",
@@ -42,6 +38,24 @@ func (c *NotificationsApiController) Routes() Routes {
 			c.Ping,
 		},
 	}
+}
+
+// Authenticate a user request
+func (c *NotificationsApiController) Authenticate(w http.ResponseWriter, r *http.Request) {
+	authenticationDetails := &AuthenticationDetails{}
+	if err := json.NewDecoder(r.Body).Decode(&authenticationDetails); err != nil {
+		w.WriteHeader(http.StatusBadRequest)
+		return
+	}
+	result, err := c.service.Authenticate(r.Context(), *authenticationDetails)
+	// If an error occurred, encode the error with the status code
+	if err != nil {
+		EncodeJSONResponse(err.Error(), &result.Code, w)
+		return
+	}
+	// If no error, encode the body and the result code
+	EncodeJSONResponse(result.Body, &result.Code, w)
+
 }
 
 // AddNotification - adds a new notification
