# server/api/api_notifications_api_service.go
@@ -1,19 +1,11 @@
-/*
- * Notifications API
- *
- * A notifications proof of concept API
- *
- * API version: 0.1.0
- * Contact: joe@bebo.dev
- * Generated by: OpenAPI Generator (https://openapi-generator.tech)
- */
-
 package api
 
 import (
 	"context"
 	"database/sql"
+	"errors"
 	"fmt"
+	"github.com/google/uuid"
 	_ "github.com/lib/pq"
 	"net/http"
 	"os"
@@ -22,7 +14,6 @@ import (
 const (
 	dbhost = "localhost"
 	dbport = 5432
-	dbuser = "postgres"
 	dbname = "notifications"
 )
 
@@ -30,6 +21,7 @@ const (
 // This service should implement the business logic for every endpoint for the NotificationsAPIApi API.
 // Include any external packages or services that will be required by this service.
 type NotificationsApiService struct {
+	apiKeys []string
 }
 
 // NewNotificationsApiService creates a default api service
@@ -39,7 +31,11 @@ func NewNotificationsApiService() NotificationsApiServicer {
 
 func (s *NotificationsApiService) getDbConnection() *sql.DB {
 	connStr := fmt.Sprintf("host=%s port=%d user=%s password=%s dbname=%s sslmode=disable",
-		dbhost, dbport, dbuser, os.Getenv("POSTGRES_PASSWORD"), dbname)
+		dbhost,
+		dbport,
+		os.Getenv("POSTGRES_USER"),
+		os.Getenv("POSTGRES_PASSWORD"),
+		dbname)
 
 	db, err := sql.Open("postgres", connStr)
 	if err != nil {
@@ -54,11 +50,41 @@ func (s *NotificationsApiService) getDbConnection() *sql.DB {
 	return db
 }
 
+func (s *NotificationsApiService) isApiKeyAuthenticated(apiKey string) bool {
+	for _, k := range s.apiKeys {
+		if k == apiKey {
+			return true
+		}
+	}
+	return false
+}
+
+// Authenticate a user request
+func (s *NotificationsApiService) Authenticate(ctx context.Context, request AuthenticationDetails) (ImplResponse, error) {
+	err := request.Validate()
+	if err != nil {
+		return Response(http.StatusBadRequest, nil), err
+	}
+
+	if request.AuthKey != os.Getenv("GO_POSTGRES_SOCKETS_AUTH_KEY") {
+		return Response(http.StatusUnauthorized, nil), errors.New("incorrect AuthKey supplied")
+	}
+
+	// store a new generated apiKey and return it to the caller for use in subsequent api calls
+	newApiKey := uuid.NewString()
+	s.apiKeys = append(s.apiKeys, newApiKey)
+	return Response(http.StatusAccepted, newApiKey), nil
+}
+
 // AddNotification - adds a new notification
 func (s *NotificationsApiService) AddNotification(ctx context.Context, request NotificationDetails) (ImplResponse, error) {
 	err := request.Validate()
 	if err != nil {
 		return Response(http.StatusBadRequest, nil), err
+	}
+
+	if !s.isApiKeyAuthenticated(request.ApiKey) {
+		return Response(http.StatusUnauthorized, nil), errors.New("incorrect ApiKey supplied")
 	}
 
 	db := s.getDbConnection()
