# server/api/impl.go
@@ -1,16 +1,6 @@
-/*
- * Notifications API
- *
- * A notifications proof of concept API
- *
- * API version: 0.1.0
- * Contact: joe@bebo.dev
- * Generated by: OpenAPI Generator (https://openapi-generator.tech)
- */
-
 package api
 
-//Implementation response defines an error code with the associated body
+// ImplResponse defines a response code with the associated body
 type ImplResponse struct {
 	Code int
 	Body interface{}
