# server/api/model_notification_socket_message_data.go
@@ -1,13 +1,3 @@
-/*
- * Notifications API
- *
- * A notifications proof of concept API
- *
- * API version: 0.1.0
- * Contact: joe@bebo.dev
- * Generated by: OpenAPI Generator (https://openapi-generator.tech)
- */
-
 package api
 
 // NotificationSocketMessageData - notification data
